Add education and goals to introduction page

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -12,10 +12,14 @@
 About Me<br>
  ( Do not include birthdate / age / contact information)<br>
 Education / Achievements<br>
-Course <br>
+Course  BS Computer Science Ateneo de Manila 1992 <br>
+        MS Computer and Informatio Systems University of Michigan 2000<br>
 IT Experience<br>
+ Programmer Analyst  SSCI Inc. 1992-1993 <br>
 Hobbies & Interests<br>
 Goals In Life / Dream<br>
+ To challenge my students to achieve their goals and dreams in IT<br>
+ To start startups with my students and aim for Unicorn status<br>
 Picture Gallery<br>
  <img src="https://www.w3schools.com/html/img_girl.jpg" alt="Girl with a jacket" width="500" height="600">
 </p>
