Integrate css-grid into your personal profile web page

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/css-grid.css">
+<link rel="stylesheet" href="css/css-grid.css?version=0.2">
 <title>Page Title</title>
 </head>
 <body>
 
 <h1>Personal Profile Web page Joe Gene Quesada </h1>
-<p>
-
-About Me<br>
+<div class="container">
+  <div>About Me<br>
  ( Do not include birthdate / age / contact information)<br>
-Education / Achievements<br>
+</div>
+  <div>Education / Achievements<br>
 Course  BS Computer Science Ateneo de Manila 1992 <br>
         MS Computer and Informatio Systems University of Michigan 2000<br>
-IT Experience<br>
- Programmer Analyst  SSCI Inc. 1992-1993 <br>
-Hobbies & Interests<br>
-Goals In Life / Dream<br>
- To challenge my students to achieve their goals and dreams in IT<br>
- To start startups with my students and aim for Unicorn status<br>
-Picture Gallery<br>
- <img src="https://www.w3schools.com/html/img_girl.jpg" alt="Girl with a jacket" width="500" height="600">
-</p>
-
-
-<div class="container">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-  <div>4</div>
-  <div>5</div>
-  <div>6</div>  
-  <div>7</div>
-  <div>8</div>  
 </div>
+  <div>IT Experience<br>
+ Programmer Analyst  SSCI Inc. 1992-1993 <br>
+</div>  
+  <div>Hobbies & Interests<br>
+- Biking<br>
+- Playing the classial guitar<br>
+</div>
+  <div>Goals In Life / Dream<br>
+ To challenge my students to achieve their goals and dreams in IT<br>
+ To start startups with my students and aim for Unicorn status<br></div>
+  <div>Picture Gallery<br>
+ <img src="https://www.w3schools.com/html/img_girl.jpg" alt="Girl with a jacket" width="500" height="600">
+</div>  
 
+</div>
 
 </body>
 </html>
