--- a/introduction/index.html
+++ b/introduction/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="css/css-grid.css?version=0.2">
-<title>Page Title</title>
+<title>WEBPROG IT243 My PErsonal Website</title>
 </head>
 <body>
 
