--- a/introduction/index.html
+++ b/introduction/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/mystyle.css">
-<title>Page Title</title>
+<title>WEBPROG IT243</title>
 </head>
 <body>
 
-<h1>Personal Profile Web page Joe Gene Quesada </h1>
+<h1>Personal Profile Web page of Joe Gene Quesada </h1>
 <p>
 
 About Me<br>
